<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/history"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="#000033"
        android:typeface="serif"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/border_layout"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/enter_name"
                android:textSize="13sp"
                android:textColor="#003333"
                android:typeface="serif"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_name_cus"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="#0000DD"
                android:typeface="serif"
                android:textStyle="bold"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/enter_address"
                android:textSize="13sp"
                android:textColor="#003333"
                android:typeface="serif"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_address_cus"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="#0000DD"
                android:typeface="serif"
                android:textStyle="bold"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/enter_phone"
                android:textSize="13sp"
                android:textColor="#003333"
                android:typeface="serif"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_phone_cus"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="#0000DD"
                android:typeface="serif"
                android:textStyle="bold"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/enter_email"
                android:textSize="13sp"
                android:textColor="#003333"
                android:typeface="serif"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_mail_cus"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="#0000DD"
                android:typeface="serif"
                android:textStyle="bold"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/product"
            android:layout_marginStart="10dp"
            android:textSize="13sp"
            android:textColor="#003333"
            android:typeface="serif"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/price"
            android:layout_marginStart="10dp"
            android:textSize="13sp"
            android:textColor="#003333"
            android:typeface="serif"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/quantity"
            android:layout_marginStart="10dp"
            android:textSize="13sp"
            android:textColor="#003333"
            android:typeface="serif"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/total_price"
            android:layout_marginStart="10dp"
            android:textSize="13sp"
            android:textColor="#003333"
            android:typeface="serif"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/date_payment"
            android:layout_marginStart="10dp"
            android:textSize="13sp"
            android:textColor="#003333"
            android:typeface="serif"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_history"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:background="@drawable/border_layout"
        android:dividerHeight="1dp"
        android:divider="#FF6600"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>