<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_cart"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:background="@drawable/border_layout"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@android:style/TextAppearance.Widget.TextView"
            android:text="@string/product"
            android:typeface="serif"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            style="@android:style/TextAppearance.Widget.TextView"
            android:text="@string/price"
            android:typeface="serif"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            style="@android:style/TextAppearance.Widget.TextView"
            android:text="@string/quantity"
            android:typeface="serif"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            style="@android:style/TextAppearance.Widget.TextView"
            android:text="@string/total_price"
            android:typeface="serif"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_cart"
        android:background="@drawable/border_layout"
        android:layout_margin="5dp"
        android:layout_below="@+id/layout_cart"
        android:layout_above="@+id/linear_layout"
        android:dividerHeight="1dp"
        android:divider="@android:drawable/divider_horizontal_dark"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
    </ListView>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:background="@drawable/border_layout"
        android:orientation="horizontal"
        android:layout_above="@+id/btn_payment"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/total_price"
            android:textSize="15sp"
            android:textColor="#0066FF"
            android:typeface="serif"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_total_price_pro"
            android:textSize="15sp"
            android:textColor="#3333CC"
            android:typeface="serif"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_payment"
        style="@android:style/Widget.CompoundButton"
        android:typeface="serif"
        android:textStyle="italic"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/payment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>